--- a/Cargo.toml
+++ b/Cargo.toml
@@ -67,6 +67,7 @@ sqlx = { version = "0.8", default-features = false, features = [
   "all-databases",
 ] }
 uuid = { version = "1.11", features = ["serde", "v4"] }
+atomicoption = { git = "https://github.com/aicacia/rs-atomic-option.git", rev = "f5cc802" }
 
 [dev-dependencies]
 
