--- a/.dockerignore
+++ b/.dockerignore
@@ -7,7 +7,7 @@
 /.env*
 /config.json
 /!config.json.example
-/storage-dev.*
-/storage-service-account.json
+/object-storage-dev.*
+/object-storage-service-account.json
 /docker-compose.yaml
 /values.yaml
