--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,19 +1,21 @@
 [package]
 authors = ["nathanfaucett@gmail.com"]
-default-run = "storage"
-description = "Aicacia Storage API provides blob services for applications."
+default-run = "object_storage"
+description = "Aicacia Object Storage API provides blob services for applications."
 edition = "2021"
 license = "MIT OR Apache-2.0"
-name = "storage"
-repository = "https://github.com/aicacia/rs-storage"
+name = "object-storage"
+repository = "https://github.com/aicacia/rs-object-storage"
 rust-version = "1.82"
 version = "0.1.0"
 
 [lib]
-name = "storage"
+name = "object_storage"
+path = "src/lib.rs"
 
 [[bin]]
-name = "storage"
+name = "object_storage"
+path = "src/main.rs"
 
 [dependencies]
 dotenv = "0.15"
