--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-DATABASE_URL=postgres://postgres:postgres@localhost:5432/storage-dev
-DATABASE_URL=mysql://mysql://root:password@localhost:3306/storage-dev
-DATABASE_URL=sqlite:storage-dev.db
+DATABASE_URL=postgres://postgres:postgres@localhost:5432/object-storage-dev
+DATABASE_URL=mysql://mysql://root:password@localhost:3306/object-storage-dev
+DATABASE_URL=sqlite:object-storage-dev.db
