--- a/.github/workflows/helm.yml
+++ b/.github/workflows/helm.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: azure/setup-helm@v4
-      - run: helm package ./helm/storage-api -d ./charts
+      - run: helm package ./helm/object-storage-api -d ./charts
       - run: helm repo index ./charts
 
       - name: Deploy
