--- a/helm/object-storage-api/templates/ingress.yaml
+++ b/helm/object-storage-api/templates/ingress.yaml
@@ -1,11 +1,11 @@
 {{- if .Values.ingress.enabled -}}
-{{- $fullName := include "storage-api.fullname" . -}}
+{{- $fullName := include "object-storage-api.fullname" . -}}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ $fullName }}
   labels:
-    {{- include "storage-api.labels" . | nindent 4 }}
+    {{- include "object-storage-api.labels" . | nindent 4 }}
   {{- with .Values.ingress.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
