--- a/helm/object-storage-api/templates/pvc.yaml
+++ b/helm/object-storage-api/templates/pvc.yaml
@@ -1,10 +1,10 @@
-{{- if eq (include "storage-api.is-sqlite" .) "true" -}}
+{{- if eq (include "object-storage-api.is-sqlite" .) "true" -}}
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: {{ include "storage-api.fullname" . }}-pvc
+  name: {{ include "object-storage-api.fullname" . }}-pvc
   labels:
-    {{- include "storage-api.labels" . | nindent 4 }}
+    {{- include "object-storage-api.labels" . | nindent 4 }}
 spec:
   accessModes:
     - ReadWriteOnce
