--- a/helm/object-storage-api/templates/sqlite-pvc.yaml
+++ b/helm/object-storage-api/templates/sqlite-pvc.yaml
@@ -2,13 +2,13 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: {{ include "object-storage-api.fullname" . }}-pvc
+  name: {{ include "object-storage-api.fullname" . }}-sqlite-pvc
   labels:
     {{- include "object-storage-api.labels" . | nindent 4 }}
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
-    {{- toYaml .Values.persistence.resources | nindent 6 }}
-  storageClassName: {{ .Values.persistence.storageClassName }}
+    {{- toYaml .Values.persistence.sqlite.resources | nindent 6 }}
+  storageClassName: {{ .Values.persistence.sqlite.storageClassName }}
 {{- end }}
