add gzip compression

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -67,6 +67,7 @@ hyper-util = { version = "0.1", default-features = false, features = [
 tower-http = { version = "0.6", default-features = false, features = [
   "cors",
   "trace",
+  "compression-gzip",
 ] }
 reqwest = { version = "0.12", default-features = false, features = [
   "rustls-tls",
@@ -102,7 +103,7 @@ chrono = { version = "0.4", default-features = false, features = ["serde"] }
 uuid = { version = "1.11", features = ["serde", "v4"] }
 atomicoption = "0.1"
 
-auth-client = { git = "https://github.com/aicacia/rs-auth.git", rev = "f6bf8e9" }
+auth-client = { git = "https://github.com/aicacia/rs-auth.git", rev = "b15fbf4" }
 
 # peer server deps
 webrtc-http = { version = "0.1", features = ["axum"] }
