--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,6 +58,7 @@ utoipa-axum = { version = "0.2", default-features = false }
 
 http = { version = "1.2", default-features = false }
 http-body-util = { version = "0.1", default-features = false }
+hyper = { version = "1.5", default-features = false }
 hyper-util = { version = "0.1", default-features = false, features = [
   "client",
   "client-legacy",
@@ -103,7 +104,7 @@ chrono = { version = "0.4", default-features = false, features = ["serde"] }
 uuid = { version = "1.11", features = ["serde", "v4"] }
 atomicoption = "0.1"
 
-auth-client = { git = "https://github.com/aicacia/rs-auth.git", rev = "b15fbf4" }
+auth-client = { git = "https://github.com/aicacia/rs-auth.git", rev = "24794e8" }
 
 # peer server deps
 webrtc-http = { version = "0.1", features = ["axum"] }
